Update Docker and API configurations; add new files to ignore list, change exposed port, and enhance JWT handling in middleware.

--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,9 @@
   },
   "prisma": {
     "schema": "prisma/schema.prisma",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "backup": "tsx scripts/backup.ts",
+    "restore": "npx prisma migrate reset --force && tsx scripts/restore.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
