fix seed script

--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
   },
   "prisma": {
     "schema": "prisma/schema.prisma",
-    "seed": "node prisma/seed.js",
+    "seed": "node prisma/scripts/seed.js",
     "backup": "tsx scripts/backup.ts",
     "restore": "npx prisma migrate reset --force && tsx scripts/restore.ts"
   },
