--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     networks:
       - R6Tracker
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U R6Tracker"]
+      test: ["CMD-SHELL", "pg_isready -U R6Tracker -d r6Tracker"]
       interval: 5s
       timeout: 5s
       retries: 5
