--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       "traefik.http.routers.api-r6tracker.tls.certresolver": "letsencrypt"
       "traefik.http.services.api-r6tracker.loadbalancer.server.port": "5000"
       "traefik.http.services.api-r6tracker.loadbalancer.server.scheme": "http"  
-      "traefik.http.middlewares.api-r6tracker-cors.headers.accesscontrolalloworiginlist": $PROD_APP_URL}
+      "traefik.http.middlewares.api-r6tracker-cors.headers.accesscontrolalloworiginlist": ${PROD_APP_URL}
       "traefik.http.middlewares.api-r6tracker-cors.headers.accesscontrolallowmethods": "GET,POST,PUT,DELETE,OPTIONS"
       "traefik.http.middlewares.api-r6tracker-cors.headers.accesscontrolallowheaders": "Content-Type,Authorization"
       "traefik.http.middlewares.api-r6tracker-cors.headers.accesscontrolallowcredentials": "true"
