--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,36 @@
 services:
-  api_r6tracker:
+  api_r6tracker_dev:
     container_name: api_r6tracker
+    profiles:
+      - development
     build:
       context: ./api
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - 5000:5000
     volumes:
       - ./api:/usr/src/api
       - /usr/src/api/node_modules
-
     environment:
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:5432/${POSTGRES_DB}?schema=public
-
     restart: unless-stopped
-
     networks:
       - R6Tracker
-
-  db_r6Tracker:
+  db_r6Tracker_dev:
     image: postgres:15-alpine
-    container_name: db_r6Tracker
+    container_name: db_r6Tracker_dev
     restart: always
-
+    ports:
+      - 5433:5432
+    profiles:
+      - development
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      DB_HOST: ${DB_HOST}
-
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - DB_HOST=${DB_HOST}
     networks:
       - R6Tracker
     healthcheck: # Ajoutez ceci pour que Docker sache quand la DB est prête
@@ -39,18 +38,88 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+  api_r6tracker_prod:
+    container_name: api_r6tracker
+    profiles:
+      - production
+    build:
+      context: ./api
+      dockerfile: Dockerfile.prod
+    environment:
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:5432/${POSTGRES_DB}?schema=public
+    labels:
+      "traefik.enable": "true"
+      "traefik.docker.network": "traefik-network"
+      "traefik.http.middlewares.https-redirect.redirectscheme.scheme": "https"
+      "traefik.http.middlewares.https-redirect.redirectscheme.permanent": "true"
+      "traefik.http.routers.api-r6tracker-http.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
+      "traefik.http.routers.api-r6tracker-http.entrypoints": "web"
+      "traefik.http.routers.api-r6tracker-http.middlewares": "https-redirect"
+      "traefik.http.routers.api-r6tracker.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
+      "traefik.http.routers.api-r6tracker.entrypoints": "websecure"
+      "traefik.http.routers.api-r6tracker.tls": "true"
+      "traefik.http.routers.api-r6tracker.tls.certresolver": "letsencrypt"
+      "traefik.http.services.api-r6tracker.loadbalancer.server.port": "5000"
+      "traefik.http.services.api-r6tracker.loadbalancer.server.scheme": "http"
+    restart: unless-stopped
+    networks:
+      - R6Tracker
+      - traefik-network
 
-  # adminer:
-  #   container_name: adminer_r6Tracker
-  #   image: adminer
-  #   ports:
-  #     - 9090:8080
-  #   networks:
-  #     - R6Tracker
-  #   profiles: [development]
+  db_r6Tracker_production:
+    image: postgres:15-alpine
+    container_name: db_r6Tracker_production
+    restart: always
+    ports:
+      - 5432:5432
+    profiles:
+      - production
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - DB_HOST=${DB_HOST}
+    networks:
+      - R6Tracker
+    healthcheck: # Ajoutez ceci pour que Docker sache quand la DB est prête
+      test: ["CMD-SHELL", "pg_isready -U R6Tracker"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    labels:
+      "traefik.enable": "true"
+      "traefik.docker.network": "traefik-network"
+      "traefik.http.middlewares.https-redirect.redirectscheme.scheme": "https"
+      "traefik.http.middlewares.https-redirect.redirectscheme.permanent": "true"
+      "traefik.http.routers.api-r6tracker-http.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
+      "traefik.http.routers.api-r6tracker-http.entrypoints": "web"
+      "traefik.http.routers.api-r6tracker-http.middlewares": "https-redirect"
+      "traefik.http.routers.api-r6tracker.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
+      "traefik.http.routers.api-r6tracker.entrypoints": "websecure"
+      "traefik.http.routers.api-r6tracker.tls": "true"
+      "traefik.http.routers.api-r6tracker.tls.certresolver": "letsencrypt"
+      "traefik.http.services.api-r6tracker.loadbalancer.server.port": "5000"
+      "traefik.http.services.api-r6tracker.loadbalancer.server.scheme": "http"
+
+  adminer:
+    container_name: adminer_r6Tracker
+    image: adminer
+    profiles:
+      - development
+    ports:
+      - 9090:8080
+    networks:
+      - R6Tracker
+    depends_on:
+      db_r6Tracker_dev:
+        condition: service_healthy
 
   prisma_studio:
     container_name: prisma_studio
+    profiles:
+      - development
     image: timothyjmiller/prisma-studio
     ports:
       - 5555:5555
@@ -59,11 +128,13 @@ services:
     networks:
       - R6Tracker
     depends_on:
-      db_r6Tracker:
+      db_r6Tracker_dev:
         condition: service_healthy
 
 networks:
   R6Tracker: {}
+  traefik-network:
+    external: true
 
 volumes:
   postgres_data:
