player can create a gazem and it become the active game

--- a/api/.env.prod
+++ b/api/.env.prod
@@ -3,14 +3,11 @@ NODE_ENV=development
 POSTGRES_USER=R6Tracker
 POSTGRES_PASSWORD=R6Tracker
 DB_HOST=db_r6Tracker_prod
-POSTGRES_DB=r6Tracker
-
+POSTGRES_DB=r6Tracker 
 VPS_API_URL=r6tracker-api.pierrecahuzac.online
 
 PROD_APP_URL=https://r6-tracker-web.vercel.app
-PROD_APP_URL_BIS=https://r6-tracker-web.vercel.app/
-DEVELOPPEMENT_APP_URL=http://192.168.1.181:5175/
-
+DEVELOPPEMENT_APP_URL=http://192.168.1.181:5175
 LOCALHOST_APP_URL=http://localhost:5175
 POSTGRES_URL=postgresql://R6Tracker:R6Tracker@db_r6Tracker:5432/r6Tracker
 JWT_SECRET="JeCr33RuneAppP0urL3/Jeu\R41nB0w6"
