--- a/api/Dockerfile.prod
+++ b/api/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:22-alpine3.22
+FROM node:22-alpine3.22 as build
 
 WORKDIR /usr/src/api
 
@@ -6,7 +6,7 @@ COPY package*.json ./
 
 COPY prisma ./prisma/
 
-RUN npm i ci
+RUN npm ci
 
 RUN npm i -g nodemon
 
