--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 
 POSTGRES_USER=R6Tracker
 POSTGRES_PASSWORD=R6Tracker
@@ -13,7 +13,7 @@ DEVELOPPEMENT_APP_URL=http://192.168.1.181:5175/
 
 LOCALHOST_APP_URL=http://localhost:5175
 POSTGRES_URL=postgresql://R6Tracker:R6Tracker@db_r6Tracker:5432/r6Tracker
-JWT_SECRET="JeCr33RuneAppP0urL3/Jeu\R41nB0w6"
-REFRESH_SECRET="JeCr33LeR3Fr35hT043nRuneAppP0urL3/Jeu\R41nB0w6"
+JWT_SECRET="JeCr33RuNeAppP0UrL3/Jeu\R41nB0w7"
+REFRESH_SECRET="JeCr33LeR3FR35hT043nRuneAPpP0urL3/Jeu/R42nB0w6"
 
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:5432/${POSTGRES_DB}?schema=public
