--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "uuid": "^13.0.0"
+    "password-validator": "^5.3.0",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
