--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,7 +6,7 @@ COPY package*.json ./
 
 COPY prisma ./prisma/
 
-RUN npm i
+RUN npm ci
 
 RUN npm i -g nodemon
 
@@ -14,6 +14,6 @@ COPY . .
 
 RUN npx prisma generate
 
-EXPOSE 3000
+EXPOSE 5000
 
 CMD ["nodemon","-L", "server.js"]
