--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -8,12 +8,13 @@ COPY prisma ./prisma/
 
 RUN npm ci
 
-RUN npm i -g nodemon
+# RUN npm i -g nodemon
 
 COPY . .
 
 RUN npx prisma generate
 
-EXPOSE 3000
+EXPOSE 5000
 
-CMD ["nodemon", "server.js"]
+# CMD ["nodemon", "server.js"]
+CMD ["npm", "start"]
