--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   api_r6tracker_dev:
-    container_name: api_r6tracker
+    container_name: api_r6tracker_dev
     profiles:
       - development
     build:
@@ -8,6 +8,8 @@ services:
       dockerfile: ./Dockerfile.dev
     ports:
       - 5000:5000
+    environment:
+      - NODE_ENV=development
     volumes:
       - ./:/usr/src/api
       - /usr/src/api/node_modules
@@ -16,7 +18,8 @@ services:
    
     restart: unless-stopped
     networks:
-      - R6Tracker
+      - caddy_jellyfin_network
+      - R6Tracker_dev_network
   db_r6Tracker_dev:
     image: postgres:15-alpine
     container_name: db_r6Tracker_dev
@@ -26,12 +29,13 @@ services:
     profiles:
       - development
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./db/postgres_data_dev:/var/lib/postgresql/data
    
     networks:
-      - R6Tracker
-    healthcheck: # Ajoutez ceci pour que Docker sache quand la DB est prête
-      test: ["CMD-SHELL", "pg_isready -U R6Tracker"]
+      - caddy_jellyfin_network
+      - R6Tracker_dev_network
+    healthcheck: # Utilise les variables du conteneur pour éviter le mauvais nom de DB
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $${POSTGRES_DB:-postgres}"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -44,26 +48,28 @@ services:
       dockerfile: ./Dockerfile.prod
     env_file:
       - .env.prod
-    labels:
-      "traefik.enable": "true"
-      "traefik.docker.network": "traefik-network"
-      "traefik.http.middlewares.https-redirect.redirectscheme.scheme": "https"
-      "traefik.http.middlewares.https-redirect.redirectscheme.permanent": "true"
-      "traefik.http.routers.api-r6tracker-http.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
-      "traefik.http.routers.api-r6tracker-http.entrypoints": "web"
-      "traefik.http.routers.api-r6tracker-http.middlewares": "https-redirect"
-      "traefik.http.routers.api-r6tracker.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
-      "traefik.http.routers.api-r6tracker.entrypoints": "websecure"
-      "traefik.http.routers.api-r6tracker.tls": "true"
-      "traefik.http.routers.api-r6tracker.tls.certresolver": "letsencrypt"
-      "traefik.http.services.api-r6tracker.loadbalancer.server.port": "5000"
-      "traefik.http.services.api-r6tracker.loadbalancer.server.scheme": "http"
+    # labels:
+    #   "traefik.enable": "true"
+    #   "traefik.docker.network": "traefik-network"
+    #   "traefik.http.middlewares.https-redirect.redirectscheme.scheme": "https"
+    #   "traefik.http.middlewares.https-redirect.redirectscheme.permanent": "true"
+    #   "traefik.http.routers.api-r6tracker-http.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
+    #   "traefik.http.routers.api-r6tracker-http.entrypoints": "web"
+    #   "traefik.http.routers.api-r6tracker-http.middlewares": "https-redirect"
+    #   "traefik.http.routers.api-r6tracker.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
+    #   "traefik.http.routers.api-r6tracker.entrypoints": "websecure"
+    #   "traefik.http.routers.api-r6tracker.tls": "true"
+    #   "traefik.http.routers.api-r6tracker.tls.certresolver": "letsencrypt"
+    #   "traefik.http.services.api-r6tracker.loadbalancer.server.port": "5000"
+    #   "traefik.http.services.api-r6tracker.loadbalancer.server.scheme": "http"
     restart: unless-stopped
     networks:
-      - R6Tracker
-      - traefik-network
+      - caddy_jellyfin_network
+      - R6Tracker_prod_network
+      # - traefik-network
+      
 
-  db_r6Tracker_production:
+  db_r6Tracker_prod:
     image: postgres:15-alpine
     container_name: db_r6Tracker_prod
     restart: always
@@ -72,30 +78,33 @@ services:
     profiles:
       - production
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./db/postgres_data_prod:/var/lib/postgresql/data
     env_file:
       - .env.prod
+    # networks:
+    #   - R6Tracker
     networks:
-      - R6Tracker
-    healthcheck: # Ajoutez ceci pour que Docker sache quand la DB est prête
-      test: ["CMD-SHELL", "pg_isready -U R6Tracker"]
+      - caddy_jellyfin_network
+      - R6Tracker_prod_network
+    healthcheck: # Utilise les variables du conteneur pour éviter le mauvais nom de DB
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $${POSTGRES_DB:-postgres}"]
       interval: 5s
       timeout: 5s
       retries: 5
-    labels:
-      "traefik.enable": "true"
-      "traefik.docker.network": "traefik-network"
-      "traefik.http.middlewares.https-redirect.redirectscheme.scheme": "https"
-      "traefik.http.middlewares.https-redirect.redirectscheme.permanent": "true"
-      "traefik.http.routers.api-r6tracker-http.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
-      "traefik.http.routers.api-r6tracker-http.entrypoints": "web"
-      "traefik.http.routers.api-r6tracker-http.middlewares": "https-redirect"
-      "traefik.http.routers.api-r6tracker.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
-      "traefik.http.routers.api-r6tracker.entrypoints": "websecure"
-      "traefik.http.routers.api-r6tracker.tls": "true"
-      "traefik.http.routers.api-r6tracker.tls.certresolver": "letsencrypt"
-      "traefik.http.services.api-r6tracker.loadbalancer.server.port": "5000"
-      "traefik.http.services.api-r6tracker.loadbalancer.server.scheme": "http"
+    # labels:
+    #   "traefik.enable": "true"
+    #   "traefik.docker.network": "traefik-network"
+    #   "traefik.http.middlewares.https-redirect.redirectscheme.scheme": "https"
+    #   "traefik.http.middlewares.https-redirect.redirectscheme.permanent": "true"
+    #   "traefik.http.routers.api-r6tracker-http.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
+    #   "traefik.http.routers.api-r6tracker-http.entrypoints": "web"
+    #   "traefik.http.routers.api-r6tracker-http.middlewares": "https-redirect"
+    #   "traefik.http.routers.api-r6tracker.rule": "Host(`${VPS_API_URL}`) && PathPrefix(`/api`)"
+    #   "traefik.http.routers.api-r6tracker.entrypoints": "websecure"
+    #   "traefik.http.routers.api-r6tracker.tls": "true"
+    #   "traefik.http.routers.api-r6tracker.tls.certresolver": "letsencrypt"
+    #   "traefik.http.services.api-r6tracker.loadbalancer.server.port": "5000"
+    #   "traefik.http.services.api-r6tracker.loadbalancer.server.scheme": "http"
 
   adminer:
     container_name: adminer_r6Tracker
@@ -108,7 +117,8 @@ services:
       - .env
    
     networks:
-      - R6Tracker
+      - caddy_jellyfin_network
+      - R6Tracker_dev_network
     depends_on:
       db_r6Tracker_dev:
         condition: service_healthy
@@ -123,16 +133,23 @@ services:
     env_file:
      - .env
     networks:
-      - R6Tracker
+      - caddy_jellyfin_network
+      - R6Tracker_dev_network
     
     depends_on:
       db_r6Tracker_dev:
         condition: service_healthy
 
 networks:
-  R6Tracker: {}
-  traefik-network:
+  caddy_jellyfin_network:
     external: true
 
+  R6Tracker_dev_network:
+    driver: bridge
+
+  R6Tracker_prod_network:
+    driver: bridge
+
 volumes:
-  postgres_data:
+  db_r6Tracker_dev_data:
+  db_r6Tracker_prod_data:
